[project]
name = "graphraglet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "openai>=1.57.0",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
]
